--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,13 @@
 }
 
 body {
-  font-family: "Helvetica";
+  font-family: "Comic Sans MS";
   font-size: 18px;
 }
-
+#mypicture{
+    float: left;
+    margin-top: 59px;
+}
 header {
   color: white;
   background-color: #4A90E2;
@@ -21,7 +24,7 @@ header {
 }
 
 header h1 {
-  font-family: "HelveticaNeue-CondensedBlack";
+  font-family: "Comic Sans MS";
   font-size: 4em;
 }
 
@@ -63,7 +66,7 @@ header h1 {
 }
 
 .card h2, .card p {
-  font-family: "HelveticaNeue-Thin";
+  font-family: "Comic Sans MS";
   font-weight: 100;
 }
 
