--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  font-family: "Comic Sans MS";
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 18px;
 }
 #mypicture{
@@ -24,7 +24,7 @@ header {
 }
 
 header h1 {
-  font-family: "Comic Sans MS";
+  font-family: 'Josefin Sans', sans-serif;
   font-size: 4em;
 }
 
@@ -66,7 +66,7 @@ header h1 {
 }
 
 .card h2, .card p {
-  font-family: "Comic Sans MS";
+  font-family: 'Josefin Sans', sans-serif;
   font-weight: 100;
 }
 
